# ling-analie-446

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  README  board.h  configure.ac  cursor.cpp  cursor.h  main.cpp  print.cpp
documentation/: ling-report.tex  proposal.tex  sudoku-box
levels/: level1.sud  level2.sud
src/: Makefile.am  board.cpp  board.h  cursor.cpp  cursor.h  main.cpp
